@@ -62,7 +62,8 @@ error-stop-output-truncated=[LTN] Fehler: Inventar von Zug __1__ in Haltestelle 
 error-invalid-delivery=[LTN] Fehler: Entferne ungültige Lieferung von Haltestelle __1__
 error-invalid-stop-index=[LTN] Fehler: Haltestelle mit ungültiger unit_number __1__ in global.LogisticTrainStops.
 error-invalid-request-index=[LTN] Fehler: Ungültiger Index __1__ in global.Dispatcher.Requests.
-error-invalid-position-signal=[LTN] Error: Positionssignal __1__ existiert nicht.
+error-invalid-position-signal=[LTN] Fehler: Positionssignal __1__ existiert nicht.
+error-invalid-schedule-record=[LTN] Fehler: Fahrplaneintrag ungültig: __1__ / __2__ : __3__.
 
 warning-dispatcher-disabled=[LTN] Warnung: Disponent deaktiviert. Es werden keine Lieferungen erstellt.
 
