@@ -63,6 +63,7 @@ error-invalid-delivery=[LTN] Error: Removing invalid delivery from stop __1__
 error-invalid-stop-index=[LTN] Error: Invalid stop unit_number __1__ in global.LogisticTrainStops.
 error-invalid-request-index=[LTN] Error: Invalid index __1__ in global.Dispatcher.Requests.
 error-invalid-position-signal=[LTN] Error: position signal __1__ does not exist.
+error-invalid-schedule-record=[LTN] Error: Could not parse schedule record for __1__ / __2__ : __3__.
 
 warning-dispatcher-disabled=[LTN] Warning: Dispatcher disabled. No deliveries will be created.
 
